Experimenting with approaches to FOUC.

--- a/style/lots.css
+++ b/style/lots.css
@@ -12,6 +12,10 @@ html, body, #map {
     height: 200px;
 }
 
+#content_info {
+    display: none;
+}
+
 #content_map {
     padding: 0 !important; 
     position: absolute !important; 
